fixe(favorites) front-end code update